Tags iniciais para html

--- a/aula_1.html
+++ b/aula_1.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>William</title>
 </head>
 <body>
+
+    <h2>A letra (h) usa-se para o título, com o número 1 a 6, quanto maior o número, menor o tamanho da fonte</h2>
+
+    <h1>Aula 1</h1>    
+    <h2>Aula 2</h2>
+    <h3>Aula 3</h3>
+    <h4>Aula 4</h4>
+    <h5>Aula 5</h5>
+    <h6>Aula 6</h6>
+
+    <p> A letra (p) usa-se para o parágrafo</p>
+
+    <br> a sigla (br) serve para quebrar a linha
+
+    <hr> a sigla (hr) serve para colocar uma linha
     
+    <a href="https://unisatc.com.br/pagina-inicial/?utm_source=pagina-inicial-satc-educacao&utm_medium=site&utm_campaign=satc-educacao"></a>
+
+
 </body>
 </html>
