continuação da aula 1

--- a/aula_1.html
+++ b/aula_1.html
@@ -24,6 +24,80 @@
     
     <a href="https://unisatc.com.br/pagina-inicial/?utm_source=pagina-inicial-satc-educacao&utm_medium=site&utm_campaign=satc-educacao">SATC</a>
 
+    <hr>
+
+    <img src="assets/cachorro.jpg" alt="Cachorro" width="30%">
+
+    <hr>
+
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+            <ul>
+                <li>Subitem A</li>
+                <li>Subitem B</li>
+                <li>Subitem C</li>
+            </ul>
+        <li>Item 3</li>
+            <ul>
+                <li>Subitem D</li>
+                <li>Subitem E</li>
+                <li>Subitem F</li>
+            </ul>
+    </ul>
+
+    <hr>
+
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+            <ul>
+                <li>Subitem A</li>
+                <li>Subitem B</li>
+                <li>Subitem C</li>
+            </ul>
+        <li>Item 3</li>
+            <ul>
+                <li>Subitem D</li>
+                <li>Subitem E</li>
+                <li>Subitem F</li>
+            </ul>
+    </ol>
+
+    <hr>
+
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>NOME</th>
+            <th>IDADE</th>
+        </tr>
+            <th>01</th>
+            <th>William</th>
+            <th>40</th>
+        </tr>
+        </tr>
+            <th>02</th>
+            <th>Aline</th>
+            <th>39</th>
+        </tr>
+        </tr>
+            <th>03</th>
+            <th>Cauã</th>
+            <th>11</th>
+        </tr>
+        </tr>
+            <th>04</th>
+            <th>Vicente</th>
+            <th>3</th>
+        </tr>
+    </table>
+
+    <hr>
+    <hr>
+
+
+
 
 </body>
 </html>
