--- a/aula_1_html.html
+++ b/aula_1_html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>William</title>
+    <title>Aula 01 - HTML</title>
 </head>
 <body>
 
