--- a/aula_2_css.html
+++ b/aula_2_css.html
@@ -26,7 +26,24 @@
     <h1 class="minha_classe">Classes em HTML</h1>
     <h3 class="minha_classe-1">Reutilização de Classe</h3>
 
+    <div style="border: 1px dashed red; width: 400px;">
+        <h3 style="border: 1px solid blue; text-align: center; padding: 10px 0px 10px 0px">Box Model</h3>
+        <p style="border: 2px solid green; text-align: justify; padding: 15px 10px 15px 10px;">Um ambiente de trabalho saudável traz produtividade e melhores resultados. Veja 50 piadas para descontrair e alivar a tensão no trabalho!</p>
+    </div>
 
+    <div>
+        <p>Bloco 1</p>
+        <p>Bloco 2</p>
+    </div>
+
+    <div>
+        <h1 style="display: inline-block; border: 2px solid red;">Bloco 1</h1>
+        <h2 style="display: inline-block; border: 2px solid blue;">Bloco 2</h2>
+    </div>
+
+    <div style="border: 5px solid black; width: 400px; height: 300px;">
+
+    </div>
 
 </body>
 </html>
